# Capillary_Bridge

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
Results/snapping/: check_dynamic_snapping.py  contact_radius_data.csv
analyse_profiles/: __init__.py  capillary_bridge.py  check_apex.py  check_contact_angle.py  check_curvature_angle.py  check_neck_contact.py  plot_profile_nicolas.py  preprocess_bridge.py
segment_profiles/: __init__.py  find_lsf.py  gui_init.py  interface_check.py  lvlset_segmentation.py  lvlset_segmentation_flat.py  tools.py
