# pyproject.toml
[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "segment_profiles"
version = "0.1"
description = "A package for segment profiling"
authors = [
    { name = "Lea Cailly-Brandstäter and Pablo Jeken-Rico", email = "lea.cailly@minesparis.psl.eu" },
]
dependencies = [
    "numpy==1.21.0",
    "scipy==1.7.0",
    "matplotlib==3.4.3",
    "PyQt5==5.15.4",
    "scikit-image==0.18.3",
]

[project.scripts]
segment_profiles = "segment_profiles.__init__:main"
