[project]
name = "segment_profiles"
version = "0.1"
description = "A package for segment profiling"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
# dependencies = [
#     "numpy==1.21.0",
#     "scipy==1.7.0",
#     "matplotlib==3.4.3",
#     "PyQt5==5.15.4",
#     "scikit-image==0.18.3",
# ]

[project.scripts]
segment_profiles = "segment_profiles.__init__:main"

[tool.setuptools.packages.find]
include = ["segment_profiles", "analyse_profiles"]